           ------------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

20 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-22)
-----------------------------------------------------------------
- G4LMsdGenerator - fixed memory leak (V.Grichine)

19 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-21)
-----------------------------------------------------------------
- G4LMsdGenerator - fixed shortlived decays (V.Grichine)

14 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-20)
-----------------------------------------------------------------
- G4LMsdGenerator - fixed energy concervation (V.Grichine)

12 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-19)
-----------------------------------------------------------------
- G4LMsdGenerator - added pions and kaons (V.Grichine)

08 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-18)
-----------------------------------------------------------------
- G4LMsdGenerator - fixed read out of the boundary

07 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-17)
-----------------------------------------------------------------
07 November 2014 V. Grichine fixed class G4LMsdGenerator 

06 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-16)
-----------------------------------------------------------------
06 November 2014 V. Grichine class G4LMsdGenerator was added for 
    low mass single diffraction dissociation

14 October 2014 - A.Ribon (hadr-cohe-V10-00-14)
-----------------------------------------------------------------
- G4DiffuseElastic : extension down to 0.1 MeV, mainly for neutrons.
- G4hhElastic : changes to combine with low mass diffraction.

31 July 2014 - A.Ribon (hadr-cohe-V10-00-13)